[gd_scene load_steps=36 format=2]

[ext_resource path="res://Enemies/Attack.tscn" type="PackedScene" id=1]
[ext_resource path="res://Slime/Slime.gd" type="Script" id=2]
[ext_resource path="res://Player/Assets/mini_slime_up.png" type="Texture" id=3]
[ext_resource path="res://Player/Assets/mini_slime_forward.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/mini_slime-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Slime/Assets/mini_slime-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Slime/Assets/mini_slime_throw-Sheet.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 15, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 30, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 45, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 60, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 18 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 18 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 18 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 18 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 44, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 22, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 88, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 54, 0, 27, 20 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 27, 0, 27, 20 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 27, 20 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 108, 0, 27, 20 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 81, 0, 27, 20 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 18 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 18 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 18 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 18 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 18 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "throw",
"speed": 12.0
}, {
"frames": [ SubResource( 21 ), SubResource( 20 ), SubResource( 13 ), SubResource( 19 ), SubResource( 23 ), SubResource( 22 ) ],
"loop": true,
"name": "walk",
"speed": 16.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "walk_forward",
"speed": 16.0
}, {
"frames": [ SubResource( 31 ), SubResource( 30 ), SubResource( 29 ), SubResource( 29 ), SubResource( 33 ), SubResource( 32 ) ],
"loop": true,
"name": "walk_up",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=44]
radius = 8.0

[node name="Slime" type="Area2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
player_path = NodePath("../Player")
follow_delay = 0.125

[node name="Animations" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 34 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Attack" parent="." instance=ExtResource( 1 )]
monitorable = false
destroy_on_hit = false

[node name="Hitbox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 44 )

[node name="VulnerableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_entered"]
[connection signal="timeout" from="VulnerableTimer" to="Hitbox" method="set_monitoring" binds= [ true ]]
